# mariadb_10.2

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  VERSION  azure-pipelines-asan.yml  azure-pipelines-debug.yml  azure-pipelines-mtr.yml  azure-pipelines.yml
azure/: azure-pipelines.orig  fetch-unpack-tarball.yml  install-es-version.yml  install-galera.yml  prepare-vm-for-installation.yml  run-mtr-suites.yml  stage2-mtr-tests.yml  stage3-rolling-upgrade.yml  stage3-upgrade.yml
azure/stage0/: build-binary-tarballs-asan.yml  build-binary-tarballs.yml  build-deb-packages.yml  build-macos-packages.yml  build-rpm-packages.yml  build-source-tarball.yml  build-windows-packages.yml  extract-source-tarball.yml
azure/tests/: run-acceptance-tests.yml  run-mtr-test.yml  win-select-insert.yml
blackbox/: CMakeLists.txt  README.md
blackbox/include/blackbox/: blackbox.h
blackbox/src/: CMakeLists.txt  bbtool.c  blackbox.c
blackbox/tests/: CMakeLists.txt  unittest.c
client/: CMakeLists.txt  mysqldump.c  mysqldump.cc
cmake/: cpack_rpm.cmake  cpack_source_ignore_files.cmake  mysql_version.cmake  plugin.cmake  sky-tweaks.cmake
cmake/build_configurations/: enterprise.cmake  mysql_release.cmake
dbug/: CMakeLists.txt  dbug.c
debian/: autobake-deb.sh  control  mariadb-aws-key-management-10.1.files  mariadb-plugin-tokudb.install  mariadb-server-10.0.preinst  mariadb-server-10.1.config  mariadb-server-10.1.files.in  mariadb-server-10.1.postinst  mariadb-server-10.1.preinst  mariadb-server-10.5.install  mariadb-server-5.5.preinst  mariadb-server-core-5.5.files  mariadb-test.install  mariadb-test.links  rules
debian/patches/: 00list
extra/mariabackup/: CMakeLists.txt  aria_backup_client.cc  backup_copy.cc  backup_copy.h  backup_debug.h  backup_mysql.cc  datasink.cc  datasink.h  ds_archive.cc  ds_buffer.cc  ds_compress.cc  ds_local.cc  ds_stdout.cc  ds_tmpfile.cc  ds_xbstream.cc  innobackupex.cc  xbstream.cc  xbstream_read.cc  xbstream_write.cc  xtrabackup.cc  xtrabackup.h
include/: my_base.h  my_global.h  wsrep.h
include/mysql/: service_wsrep.h
libmysqld/: lib_sql.cc  libmysql.c
mysql-test/: mysql-test-run.pl  suite.pm
mysql-test/include/: default_mysqld.cnf
mysql-test/lib/: mtr_report.pm
mysql-test/main/: alter_table.result  alter_table.test  bootstrap.result  bootstrap.test  connect.result  foreign_key.result  foreign_key.test  grant.result  information_schema.result  information_schema_all_engines.result  information_schema_db.result  information_schema_inno.result  insert_delayed.result  insert_delayed.test  join.result  join.test  lowercase_fs_off.result  myisam_crash_before_flush_keys.result  myisam_crash_before_flush_keys.test  mysql_upgrade-6984.result  mysql_upgrade.result  mysql_upgrade_noengine.result  mysqlbinlog_row_compressed.result  mysqlbinlog_row_minimal.result  mysqlbinlog_row_minimal.test  mysqld--help.result  mysqldump.result  mysqldump.test  repair_symlink-5543.result  repair_symlink-5543.test  system_mysql_db.result  system_mysql_db_fix40123.result  system_mysql_db_fix40123.test  system_mysql_db_fix50030.result  system_mysql_db_fix50030.test  system_mysql_db_fix50117.result  upgrade_MDEV-19650.result  x.result  x.test
mysql-test/r/: mysqld--help.result  partition.result  partition_innodb.result  partition_innodb_plugin.result
mysql-test/suite/federated/: federatedx_versioning.result  x.test
mysql-test/suite/galera/: disabled.def
mysql-test/suite/galera_3nodes/: suite.pm
mysql-test/suite/innodb/: disabled.def
mysql-test/suite/innodb_gis/: disabled.def
mysql-test/suite/mariabackup/: apply-log-only-incr.test  apply-log-only.test  aria_backup.result  aria_backup.test  binlog.test  huge_lsn.test  log_tables.result  log_tables.test  mdev-14447.test  undo_space_id.test  xb_partition.test
mysql-test/suite/rpl/: disabled.def
mysql-test/suite/sql_sequence/: gtid.test  replication.test
mysql-test/suite/versioning/: both.combinations  both.inc  common.inc  common_finish.inc  disabled.def  engines.combinations  engines.inc  engines.opt  innodb_plugin.opt  suite.pm
mysql-test/t/: partition_innodb_plugin.test
mysys/: mf_iocache.c
plugin/auth_socket/: CMakeLists.txt
plugin/aws_key_management/: CMakeLists.txt
plugin/cracklib_password_check/: CMakeLists.txt  cracklib_password_check.c
plugin/feedback/: CMakeLists.txt
plugin/server_audit/: server_audit.c
plugin/server_audit2/: server_audit.c
plugin/versioning/: versioning.cc
policy/: CMakeLists.txt
policy/selinux/: CMakeLists.txt  mariadb-server.rhel7.te
scripts/: CMakeLists.txt  mysql_install_db.sh  mysql_system_tables.sql  mysql_system_tables_data.sql  mysqld_safe.sh
sql/: CMakeLists.txt  backup.cc  datadict.cc  datadict.h  field.cc  field.h  filesort.cc  ha_partition.cc  ha_partition.h  handler.cc  handler.h  item.cc  item.h  item_func.cc  item_strfunc.h  item_vers.cc  item_vers.h  item_windowfunc.cc  lex_string.h  lock.cc  log.cc  log.h  log_event.cc  log_event.h  log_event_server.cc  mdl.cc  my_decimal.cc  mysqld.cc  mysqld.h  opt_range.cc  opt_subselect.cc  partition_element.h  partition_info.cc  partition_info.h  protocol.cc  protocol.h  rpl_gtid.cc  rpl_parallel.cc  rpl_rli.cc  service_wsrep.cc  (+70 more)
sql-common/: client.c
sql/share/: errmsg-utf8.txt
storage/connect/: CMakeLists.txt  ha_connect.cc
storage/federatedx/: ha_federatedx.cc
storage/innobase/btr/: btr0btr.cc  btr0cur.cc
storage/innobase/buf/: buf0buf.cc
storage/innobase/dict/: dict0crea.cc  dict0dict.cc  dict0load.cc  dict0mem.cc
storage/maria/: ha_maria.cc  ma_control_file.h  ma_loghandler.c  maria_def.h
storage/mroonga/: ha_mroonga.cpp  ha_mroonga.hpp  mrn_table.cpp
storage/rocksdb/: ha_rocksdb.cc  rdb_datadic.cc
storage/spider/: spd_copy_tables.cc  spd_db_conn.cc  spd_direct_sql.cc  spd_table.cc
strings/: json_lib.c
support-files/: CMakeLists.txt  wsrep.cnf.sh
support-files/rpm/: mariadb-enterprise.cnf  selinux-postin.sh  selinux-postun.sh  server-postin.sh  server-prein.sh  server.cnf
win/packaging/: CMakeLists.txt  create_msi.cmake  extra.wxs.in
(+280 files in other folders)
